# GammaOSNextDistribution-14

./: .gitattributes  build.sh
prebuilts/jdk/jdk21/: BUILD.bazel  manifest.xml  update.sh
prebuilts/jdk/jdk21/darwin-arm64/: release
prebuilts/jdk/jdk21/darwin-arm64/jmods/: java.compiler.jmod  java.datatransfer.jmod  java.instrument.jmod  java.logging.jmod  java.management.jmod  java.management.rmi.jmod  java.naming.jmod  java.net.http.jmod  java.prefs.jmod  java.rmi.jmod  java.scripting.jmod  java.se.jmod  java.security.jgss.jmod  java.security.sasl.jmod  java.smartcardio.jmod  java.sql.jmod  java.sql.rowset.jmod  java.transaction.xa.jmod  java.xml.crypto.jmod  jdk.accessibility.jmod  jdk.attach.jmod  jdk.charsets.jmod  jdk.crypto.cryptoki.jmod  jdk.crypto.ec.jmod  jdk.dynalink.jmod  jdk.editpad.jmod  jdk.hotspot.agent.jmod  jdk.httpserver.jmod  jdk.incubator.vector.jmod  jdk.internal.ed.jmod  jdk.internal.jvmstat.jmod  jdk.internal.le.jmod  jdk.internal.opt.jmod  jdk.internal.vm.ci.jmod  jdk.internal.vm.compiler.jmod  jdk.internal.vm.compiler.management.jmod  jdk.jartool.jmod  jdk.javadoc.jmod  jdk.jcmd.jmod  jdk.jconsole.jmod  (+24 more)
prebuilts/jdk/jdk21/darwin-arm64/lib/: classlist  jspawnhelper  libattach.dylib  libawt.dylib  libawt_lwawt.dylib  libdt_socket.dylib  libextnet.dylib  libfontmanager.dylib  libfreetype.dylib  libinstrument.dylib  libj2gss.dylib  libj2pcsc.dylib  libj2pkcs11.dylib  libjaas.dylib  libjava.dylib  libjavajpeg.dylib  libjawt.dylib  libjdwp.dylib  libjimage.dylib  libjli.dylib  libjsound.dylib  liblcms.dylib  lible.dylib  libmanagement.dylib  libmanagement_agent.dylib  libmanagement_ext.dylib  libmlib_image.dylib  libnet.dylib  libnio.dylib  libosx.dylib  libosxapp.dylib  libosxkrb5.dylib  libosxsecurity.dylib  libosxui.dylib  libprefs.dylib  (+7 more)
prebuilts/jdk/jdk21/darwin-x86/: release
prebuilts/jdk/jdk21/linux-x86/: release
test/dittosuite/: Android.bp  BUILD.bazel  MODULE.bazel
test/dittosuite/example/android/: binder_gen.ditto
test/dittosuite/include/ditto/: binder_request.h
test/dittosuite/schema/: benchmark.proto
test/dittosuite/src/: binder_request.cpp  instruction.cpp  instruction_factory.cpp
test/dittosuite/test/: logger_test.cpp
(+4588 files in other folders)
