load("@bazel_tools//tools/jdk:local_java_repository.bzl", "local_java_runtime")

package(default_visibility = ["//visibility:public"])

java_runtime(
    name = "jdk21_runtime",
    srcs = glob(["linux-x86/**"]),
    java_home = "linux-x86",
)

local_java_runtime(
    name = "jdk21",
    exec_compatible_with = ["//build/bazel_common_rules/platforms/os:linux"],
    java_home = None,
    runtime_name = ":jdk21_runtime",
    version = "21",
)

filegroup(
    name = "jar",
    srcs = ["linux-x86/bin/jar"],
    data = [":jdk21_runtime"],
)
